fix: wrapped all clickable elements into buttons

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -74,6 +74,8 @@ html,body {
     background-color: initial;
     border: none;
     border-radius: 50%;
+    margin: 0;
+    padding: 0;
 }
 
 .a-link {
