--- a/src/components/Labs/LabDetails/LabDetails.css
+++ b/src/components/Labs/LabDetails/LabDetails.css
@@ -63,7 +63,17 @@
     row-gap: 0.7rem;
 }
 
+.actions-container button {
+    background-color: inherit;
+    color: inherit;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: inherit;
+}
+
 .action-button {
+    color: inherit;
     padding: 0.5rem;
     border: 1px solid rgb(126, 126, 126);
     border-radius: 8px;
